# gayt

./: README.md  ROADMAP.md  package.json  pnpm-lock.yaml  vite.config.ts
.claude/: settings.local.json
.github/workflows/: build.yml
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: clone.rs  commit.rs  extensions.rs  mod.rs  provider.rs  repo.rs
src-tauri/src/domain/: mod.rs  provider.rs  repository.rs  search.rs  status.rs
src-tauri/src/infrastructure/: github.rs  gitlab.rs
src/components/: BranchSelector.tsx  CILogsDialog.tsx  CloneDialog.tsx  CommitCIStatus.tsx  CommitGraph.tsx  CommitListDisplay.tsx  CommitPanel.tsx  CommitSearch.tsx  ConflictPanel.tsx  CreateBranchDialog.tsx  CreateTagDialog.tsx  DiffView.tsx  FileList.tsx  LfsPanel.tsx  OperationLogPanel.tsx  RebasePanel.tsx  RepoList.tsx  RepoListItem.tsx  RepoView.tsx  Settings.tsx  ShortcutConfigPanel.tsx  SubmodulePanel.tsx  SubtreePanel.tsx  TagList.tsx  VirtualizedCommitList.tsx  WelcomeDialog.tsx
src/components/ui/: Calendar.tsx  Popover.tsx  Tooltip.tsx
src/hooks/: useDebounce.ts
src/lib/: operationHistory.ts  shortcuts.ts  syntaxHighlighter.ts
src/store/: providerStore.ts  repoStore.ts  settingsStore.ts
src/types/: index.ts
